Updates contact info, adds node 0.8 and 0.10 to ci

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "Andrew Nordman <anordman@agoragames.com>",
+  "author": "Andrew Nordman <cadwallion@gmail.com>",
   "name": "factory-worker",
   "description": "NodeJS Datastore-agnostic Factory pattern",
   "keywords": ["factory", "datastore", "testing"],
