--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: node_js
 node_js:
   - 0.4
   - 0.6
+  - 0.8
+  - 0.10
 notifications:
   email:
     recipients:
-      - anordman@majorleaguegaming.com
+      - cadwallion@gmail.com
